--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "formidable": "^1.2.1",
     "handlebars-helpers": "^0.10.0",
+    "imgur": "^0.3.1",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
