--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "cs275 project skeleton",
   "main": "app.js",
   "scripts": {
-    "test": "node app.js",
+    "test": "mocha",
     "dev": "nodemon app.js",
     "start": "node app.js"
   },
@@ -19,6 +19,7 @@
     "formidable": "^1.2.1",
     "handlebars-helpers": "^0.10.0",
     "imgur": "^0.3.1",
+    "mocha": "^6.0.2",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
